# geminiocr

./: .env.example  .gitignore  README.md  pyproject.toml
examples/receipt_ocr/: README.md  instruction.txt  output.example.json  receipt_exctactor.py  schema.json
src/geminiocr/: __init__.py  __main__.py  cache.py  cli.py  config.py  ocr.py
tests/: test_discover_groups.py  test_settings.py
